# linker

./: .gitignore  LICENSE  README.md  data.json  main.ipynb  main.py  pyproject.toml
config/: cotization.json  data.json  images.json  producs.json  prompt.md  prompt_cotizacion.md
confirmer/: app.py  viewer.py
confirmer/static/: app.js  style.css
confirmer/templates/: index.html
generator/: __init__.py  product.py  recibo.py  template.py
llm_client/: __init__.py  client.py  config.py  gemini.py  glm.py  mimo.py  minimax.py  openrouter.py
processor/: __init__.py  docx_extractor.py  extractor.py  ocr.py  pdf_extractor.py
products/: products.py
tests/: test_docx_extractor.py  test_pdf_extractor.py
