[project]
name = "linker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-docx",
    "Pillow",
    "langchain-anthropic",
    "langchain-google-genai",
    "python-dotenv",
    "ipywidgets",
    "openpyxl>=3.1.5",
    "docxtpl",
    "pdfplumber>=0.11.9",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.22",
    "mammoth>=1.12.0",
    "opencv-python-headless>=4.10.0",
    "polars>=1.39.3",
    "fastexcel>=0.19.0",
]
