[project]
name = "linker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
    "docx2pdf>=0.1.8",
    "python-docx",
    "Pillow",
    "langchain-anthropic",
    "langchain-google-genai",
    "python-dotenv",
    "ipywidgets",
    "openpyxl>=3.1.5",
    "docxtpl",
    "pdfplumber>=0.11.9",
    "easyocr>=1.7.2",
    "pytesseract>=0.3.13",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.24",
    "mammoth>=1.12.0",
    "opencv-python-headless>=4.10.0",
    "polars>=1.39.3",
    "fastexcel>=0.19.0",
]
